--- a/src/styles/pages/orphanages-map.css
+++ b/src/styles/pages/orphanages-map.css
@@ -40,11 +40,17 @@
     font-weight: 800;
 }
 
+#page-map .leaflet-container {
+    z-index: 5;
+}
+
 #page-map .create-orphanage {
     position: absolute;
 
     right: 40px;
     bottom: 40px;
+
+    z-index: 10;
 
     width: 64px;
     height: 64px;
@@ -55,7 +61,7 @@
     justify-content: center;
     align-items: center;
 
-
+    transition: background-color 0.2s;
 }
 
 #page-map .create-orphanage:hover {
